TS-4614: avoid e->schedule_in for dummy event